apps/infra/open-vpn/k8s-manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openvpn-service
  namespace: infra
  labels:
    app: openvpn
spec:
  type: NodePort
  selector:
    app: openvpn
  ports:
  - name: admin
    port: 943
    targetPort: 943
    nodePort: 30943     # Admin UI
  - name: vpn-tcp
    port: 1194
    targetPort: 1194
    nodePort: 31194     # VPN connection
